Add StoryBored functionality

--- a/app/views/pages/pugs.html.erb
+++ b/app/views/pages/pugs.html.erb
@@ -1,3 +1,49 @@
 <% provide(:title, "Pugs") %>
-<h1>Pages#pugs</h1>
-<p>Find me in app/views/pages/pugs.html.erb</p>
+<div class="jumbotron jumbotron-pugs" id="pugs">
+    <div class="container">
+        <h1>Walter Tan</h1>
+        <h3>Is it a good pug name? Or the best pug name!?</h3>
+        <h3><a href="http://i.imgur.com/d8DT3.gif">Click here to learn more</a></h3>
+    </div>
+</div>
+
+<div class="pug-info">
+    <div class="container">
+        <h2>Not sure what color pugs there are?</h2>
+        <p>PugLyfe can help you! Just look at these friendly faces!</p>
+    </div>
+    <div class="container">
+        <div class="slideshow">
+            <div class="slides">
+				<img src="http://dublindonut.com/Content/Images/Pugs/pug1.jpg">
+				<img src="http://dublindonut.com/Content/Images/Pugs/pug2.jpg">
+			</div>
+			<div class="slides">
+				<img src="http://dublindonut.com/Content/Images/Pugs/pug3.jpg">
+				<img src="http://dublindonut.com/Content/Images/Pugs/pug4.jpg">
+			</div>
+        </div>
+    </div>
+    <div class="container">
+		<div class="pug-family">
+			<h1> &lt;3</h1>
+		</div>
+	</div>
+</div>
+
+<div class="pug-outro">
+	<div class="container">
+		<h2>Volunteer at the SPCA!</h2>
+		<p>The Albrecth Center for Animal Welfare, in Aiken, South Carolina, has been putting needy animals into loving homes since 1935.</p>
+		<p><a href="http://letlovelive.org/Volunteer.php">See what you can do to help!</a></p>
+		<h2>Adopt a Pug Today!</h2>
+		<p>Animal adoption can be incredibly rewarding.</p>
+		<p><a href="https://www.petfinder.com/">Find a pug near you!</a></p>
+	</div>
+</div>
+
+<div class="pug-footer">
+	<div class="container">
+		<a href="http://instagram.com/pugs"><img src="http://dublindonut.com/Content/Images/instagram-l.png"></a>
+	</div>
+</div>
