--- a/app/views/pages/web_project.html.erb
+++ b/app/views/pages/web_project.html.erb
@@ -1,16 +1,16 @@
 <% provide(:title, "Web Project") %>
-<h1>Web Project</h1>
-<ul>
-    <li><%= link_to "Pugs", pugs_path %></li>
-    <li><%= link_to "StoryBored", storybored_path %></li>
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-    <!--<li><%= %></li>-->
-</ul>
+<div class="jumbotron jumbotron-webproject" id="webproject">
+    <h1>Web Project</h1>
+    <h3>Learning to make stuff one page at a time</h3>
+</div>
+
+<div class="webproject-info">
+    <h2>Welcome</h2>
+    <p>Welcome to the web project of Dublin Donuts! We're honestly not too sure we want to accomplish (besides learn a bit of web development) but you can watch us make progress here! We definitely have a few ideas up our sleeves,  but for the most part, we're just messing around. We'll post all the pages we create below. Follow the blog for a more in-depth review.</p>
+    <ul>
+        <li><%= link_to "Pugs", pugs_path %></li>
+        <li><%= link_to "StoryBored", storybored_path %></li>
+        <!--<li><%= %></li>-->
+
+    </ul>
+</div>
