--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,5 @@
-<div class="jumbotron">
+<div class="jumbotron jumbotron-index" id="index">
     <h1>Dublin Donut</h1>
+    <h3>A place for things we find mildly interesting</h3>
     <%= link_to "Enter", web_project_path, class: "btn btn-default" %>
 </div>
