--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <header class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Dublin Donut</span>
@@ -11,12 +11,11 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav pull-right">
-                <li><%= link_to "Home", root_path %></li>
                 <li><%= link_to "Web Page Project", web_project_path %></li>
                 <li><%= link_to "Blog", "http://blog.dublindonut.com" %></li>
                 <li><%= link_to "Twitter", "http://twitter.com/dublindonut" %></li>
                 <li><%= link_to "About Us", "http://blog.dublindonut.com/aboutus" %></li>
             </ul>
         </div>
-    </div>
-</div>
+    </header>
+</nav>
