--- a/app/views/pages/scroll.html.erb
+++ b/app/views/pages/scroll.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#scroll</h1>
-<p>Find me in app/views/pages/scroll.html.erb</p>
+<% provide(:title,"Scroll") %>
+<div class="scroll-top">
+	<div class="container">
+		<p>Y&nbsp;u &nbsp;r&nbsp; f&nbsp;l&nbsp; o&nbsp;: </p>
+	</div>
+</div>
+
+<div class="scroll-bottom">
+	<div class="container">
+		<p>&nbsp;o&nbsp;&nbsp;a&nbsp;e&nbsp;&nbsp;u&nbsp;l&nbsp;&nbsp;f&nbsp;&nbsp;&nbsp;butthurt,</p>
+		<p>lol
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is a poem</p>
+		<p>&nbsp;</p>
+		<p></p>
+
+	</div>
+</div>
