--- a/app/views/pages/colorbox.html.erb
+++ b/app/views/pages/colorbox.html.erb
@@ -28,7 +28,7 @@
 </script>
 <body>
 
-	<div class="jumbotron" id="#jumbotron-colorbox">
+	<div class="jumbotron jumbotron-colorbox" id="jumbotron-colorbox">
 		<div class="container">
 			<h1>ColorBox</h1>
 			<p>A place to be creative</p>
@@ -358,6 +358,64 @@
         <div class="colorbox-box"></div>
         <div class="colorbox-box"></div>
         <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+        <div class="colorbox-box"></div>
+<div class="colorbox-box"></div>
         <div class="colorbox-box"></div>
         <div class="colorbox-box"></div>
         <div class="colorbox-box"></div>
