--- a/app/views/pages/web_project.html.erb
+++ b/app/views/pages/web_project.html.erb
@@ -11,6 +11,7 @@
         <li><%= link_to "Pugs", pugs_path %></li>
         <li><%= link_to "StoryBored", storybored_path %></li>
         <li><%= link_to "ColorBox", colorbox_path %></li>
+        <li><%= link_to "Scroll", scroll_path %></li>
         <!--<li><%= %></li>-->
 
     </ul>
