Add RoundTimer functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -227,3 +227,52 @@ body {
     	padding-top: 0px;
     }
 }
+
+// Roundtimer
+#roundtimer {
+    background-image: url("http://dublindonut.com/Content/Images/timer/timer.jpg");
+	height: 500px;
+	background-size: cover;
+	background-attachment: fixed;
+	.container {
+	    padding: 100px;
+	}
+	a {
+	    font-style: italic;
+	    color: white;
+	}
+	a:hover {
+	    color: white;
+	}
+	h1 {
+	    color: white;
+	    font-weight: bold;
+	    font-size: 100px;
+	}
+}
+
+#roundtimer-well {
+    margin-top: 10px;
+    width: 75%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    ul {
+        list-style-type: none;
+    }
+}
+
+.roundtimer-timer-container {
+    text-align: center;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    .roundtimer-current-status {
+        font-size: 30px;
+    }
+    .roundtimer-function {
+        font-size: 50px;
+    }
+
+    
+}
